--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="F:/Regression/Selenium/Selenium_Files/Jar/selenium-server-standalone-3.14.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
