Selenium Session 29 Feb

--- a/.classpath
+++ b/.classpath
@@ -18,7 +18,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="F:/Regression/Selenium/Selenium_Files/Jar/selenium-server-standalone-3.14.0.jar"/>
+	<classpathentry kind="src" path="/Cucumber_Project_Session"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
